hyrax_tests/errors/bes_not_found_error.ascii
url = http://localhost:8080/opendap/data/nc/fnoc1.nc.ascii?error(5)
-s
